@@ -11,6 +11,7 @@ phodevi: Add support for reading GPU usage sensor with AMDGPU gpu_busy_percent s
 phodevi: Updated gpu_voltage sensor for AMDGPU driver
 phodevi: Updated gpu_power sensor for AMDGPU driver
 phodevi: Updated gpu_fanspeed sensor for AMDGPU driver
+phodevi: Updated gpu_freq sensor for AMDGPU driver
 
 Phoronix Test Suite 8.4.0-Skiptvet
 26 November 2018
